Added arg params failsafe plugin