@@ -59,6 +59,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.18.1</version>
+                <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
                 <configuration>
                     <systemPropertyVariables>
                         <sauceUsername>${sauceUsername}</sauceUsername>
